<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:background="@drawable/layout_bg"
            android:orientation="horizontal"
            android:padding="0dp"
            android:layout_marginTop="13dp"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:text="@string/my_stocks"
                android:textColor="#FFFFFF"
                android:textSize="40dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_menu"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg_white"
            android:orientation="vertical"
            android:padding="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/div_cal_text"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_in_dif_countries"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_rus"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_usa"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_germ"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_uk"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_japan"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_china"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_hk"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tax_sing"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/for_residents"
                android:textColor="@color/black"
                android:textSize="17sp"/>





        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:background="@drawable/layout_bg"
            android:orientation="horizontal"
            android:layout_marginTop="-80dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.979">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:onClick="calc"
                android:text="@string/Kalkulator"
                android:textColor="#FFFFFF"
                android:textSize="13dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:onClick="menu"
                android:text="@string/Menu"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:onClick="div"
                android:text="@string/Dividend"
                android:textColor="#FFFFFF"
                android:textSize="13dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>