<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_marginTop="13dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:fontFamily="@font/fira_sans"
            android:gravity="center"
            android:text="@string/my_stocks"
            android:textColor="#FFFFFF"
            android:textSize="40dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:fontFamily="@font/fira_sans"
            android:onClick="mDiv"
            android:text="@string/kalendar_dividend"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:fontFamily="@font/fira_sans"
            android:onClick="mCalc"
            android:text="@string/kalkulator_dividend"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:fontFamily="@font/fira_sans"
            android:onClick="mTax"
            android:text="@string/m_tax"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:fontFamily="@font/fira_sans"
            android:onClick="mAboutApp"
            android:text="@string/about_app"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:fontFamily="@font/fira_sans"
            android:onClick="open_site"
            android:text="@string/open_site"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:background="@drawable/layout_bg"
            android:orientation="horizontal"
            android:layout_marginTop="-80dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.979">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:onClick="calc"
                android:text="@string/Kalkulator"
                android:textColor="#FFFFFF"
                android:textSize="13dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:onClick="menu"
                android:text="@string/Menu"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:onClick="div"
                android:text="@string/Dividend"
                android:textColor="#FFFFFF"
                android:textSize="13dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>